...
      body: _buildBody(context, isLoading, plans, error),
      bottomNavigationBar: _selectedPlan != null
        ? Padding(
          padding: const EdgeInsets.all(16.0),
          child: ElevatedButton(
            onPressed: _navigateToPurchaseScreen,
            child: const Text('このプランで進む'),
            style: ElevatedButton.styleFrom(
               padding: const EdgeInsets.symmetric(vertical: 16.0)
            ),
          ),
        )
        : null,
...
