...
      ),
      bottomNavigationBar: selectedMethod != null
          ? Padding(
              padding: const EdgeInsets.all(16.0),
              child: ElevatedButton(
                onPressed: _navigateToConfirmationScreen,
                child: const Text('確認画面へ進む'),
                style: ElevatedButton.styleFrom(
                    padding: const EdgeInsets.symmetric(vertical: 16.0)),
              ),
            )
          : null,
    );
...
